--- a/templates/one/3/index.html
+++ b/templates/one/3/index.html
@@ -12,18 +12,18 @@
   <body>
     <ul class="nav">
       <li class="nav-item">
-        <a class="nav-link active" href="#"><i class="fas fa-phone-square-alt"></i> 소비자 상담센터: 010-0000-0000</a>
+        <a class="nav-link active" href="#"><i class="fas fa-phone-square-alt"></i> Phone: 010-0000-0000</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#"><i class="fas fa-cart-plus"></i> 장바구니</a>
+        <a class="nav-link" href="#"><i class="fas fa-cart-plus"></i> Cart</a>
       </li>
 
       <li class="nav-item">
-        <a class="nav-link disabled"><i class="fas fa-user-circle"></i> (이용자명) 고객님</a>
+        <a class="nav-link disabled"><i class="fas fa-user-circle"></i> Hi! Username!</a>
       </li>
     </ul>
     <nav class="navbar navbar-expand-lg navbar-light bg-warning">
-      <h2 href="#"><i class="fas fa-store"></i> 클릭스토어</h2>
+      <h2 href="#"><i class="fas fa-store"></i> CLICK STORE</h2>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -31,32 +31,32 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">홈 <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          카테고리 상품보기
+          Category Products
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">푸드</a>
-              <a class="dropdown-item" href="#">라이프</a>
+              <a class="dropdown-item" href="#">Food</a>
+              <a class="dropdown-item" href="#">Life</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">4월 프로모션</a>
+              <a class="dropdown-item" href="#">Promotion</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">인기상품</a>
+            <a class="nav-link" href="#">Popular</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">프로모션</a>
+            <a class="nav-link" href="#">Promotion</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">새벽배송</a>
+            <a class="nav-link" href="#">Early morning delivery</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="search" placeholder="건전지/자동차용품 매일 쓰는 용품" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">검색</button>
+          <input class="form-control mr-sm-2" type="search" placeholder="Batteries / automobile supplies" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
       </div>
     </nav>
@@ -87,41 +87,41 @@
       </a>
     </div>
     <center>
-      <h2>4월의 인기상품</h2>
+      <h2>Popular Products</h2>
     </center>
     <div class="card" style="width:18rem;">
       <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">상품 이미지</text></svg>
       <div class="card-body">
-        <p class="card-text"><strong>품질 좋은 100% 한우</strong><br>39,900원</p>
+        <p class="card-text"><strong>Quality 100% Korean beef</strong><br>39,900 WON</p>
         <button class="btn btn-primary">구매하기</button>
       </div>
     </div>
     <center>
-      <h2>타임세일!</h2>
+      <h2>Time sale!</h2>
     </center>
     <div class="card" style="width:18rem;">
       <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">상품 이미지</text></svg>
       <div class="card-body">
-        <p class="card-text"><strong>품질 좋은 100% 한우</strong><br>39,900원</p>
+        <p class="card-text"><strong>Quality 100% Korean beef</strong><br>39,900 WON</p>
         <h2>02:10:05</h2>
-        <button class="btn btn-danger">구매하기</button>
+        <button class="btn btn-danger">Buy</button>
       </div>
     </div>
     <center>
-      <h2>고객님을 위한 맞춤상품</h2>
+      <h2>For you</h2>
     </center>
     <div class="card" style="width:18rem;">
       <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Image cap"><title>Placeholder</title><rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">상품 이미지</text></svg>
       <div class="card-body">
-        <p class="card-text"><strong>품질 좋은 100% 한우</strong><br>일시품절</p>
-        <button class="btn btn-primary">자세히 보기</button>
-        <button class="btn btn-secondary">재고 알림</button>
+        <p class="card-text"><strong>Quality 100% Korean beef</strong><br>Temporarily out of stock</p>
+        <button class="btn btn-primary">See more</button>
+        <button class="btn btn-secondary">Inventory Notification</button>
       </div>
     </div>
     <footer class="pt-4 my-md-5 pt-md-5 border-top">
       <div class="row">
         <div class="col-12 col-md">
-          <h2>클릭스토어</h2>
+          <h2>CLICK STORE</h2>
           <small class="d-block mb-3 text-muted">© 2017-2019</small>
         </div>
        
